--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Mehul Kumar Nirala</h2>
             <p style="color:#fff;">Deep Learning | Open Source enthusiast</p>
             <div class="icon-row">
-                <a href="https://github.com/MuLx10"><i class="fa fa-github"></i></a>
+                <a href="https://github.com/eli-shane"><i class="fa fa-github"></i></a>
                 <a href="https://codepen.io/MuLx10/pens/public"><i class="fa fa-codepen"></i></a>
                 <a href="https://www.linkedin.com/in/mulx10/"><i class="fa fa-linkedin"></i></a>
                 <a href="https://www.youtube.com/channel/UCjjFH9N2NbldiSS4-JuEB4g"><i class="fa fa-youtube"></i></a>
