--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mehul Kumar Nirala</title>
+    <title>Mehul Nirala</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/hearts.png" type="image/x-icon"/>
@@ -25,7 +25,7 @@
     <div class="header">
         <div class="fixed-content">
             <img class="port" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95581/cat.jpg">
-            <h2>Mehul Kumar Nirala</h2>
+            <h2>Mehul Nirala</h2>
             <p style="color:#fff;">Deep Learning | Open Source enthusiast</p>
             <div class="icon-row">
                 <a href="https://github.com/eli-shane"><i class="fa fa-github"></i></a>
